welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: '<-' expected but ')' found.
  for (i<=0 to largeur){
                      ^ColumnByColumn:13: error: illegal start of simple expression
} 
^